<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="HMI" Id="{b4524cf6-01bd-4417-9a57-24146ccc07e2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stToHMI : ST_ToHMI;
	stFromHMI : ST_FromHMI; 
	iMenu : USINT;
	iPopupMenu : USINT;
	stStation	:ST_Station_HMI;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>